<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="@color/colorAccent">

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_item_title"
        android:id="@+id/deal_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold" />

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_level"
        android:id="@+id/deal_item_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deal_item_title"
        android:layout_marginTop="35dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_price"
        android:id="@+id/deal_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deal_item_level"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_quality"
        android:id="@+id/deal_item_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deal_item_price"
        android:layout_marginTop="65dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_required_level"
        android:id="@+id/deal_item_reqLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deal_item_quality"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/default_buyout_price"
        android:id="@+id/deal_item_buyout_price"
        android:layout_below="@+id/deal_item_reqLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="95dp"/>
</android.support.v7.widget.CardView>