<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@drawable/deathwing">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#CF061A"
        android:layout_margin="4dp"
        android:layout_above="@+id/edit_items_button"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="8dp">
        <TextView
            android:text="@string/deal_display"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="#A8A8A8"
            android:id="@+id/deal_range_display"/>
    </android.support.v7.widget.CardView>


    <Button
        android:text="@string/show_me_deals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_deals_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#A5B8A5"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:text="@string/edit_deal_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_deal_button"
        android:layout_above="@+id/show_deals_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#A5B8A5"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:text="@string/edit_my_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_items_button"
        android:layout_above="@+id/edit_deal_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#A5B8A5"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
</RelativeLayout>